Fixed the dog image on mobile

--- a/src/styles/Error.module.css
+++ b/src/styles/Error.module.css
@@ -68,6 +68,10 @@
     .dog {
         height: fit-content;
     }
+    .dog > img {
+        width: 100vw;
+        height: fit-content;
+    }
     
     .dog > button {
         width: 60%;
